Bug 284348 - launcher for preferred:// app shold use name from .desktop file, not name of desktop file
Summary: launcher for preferred:// app shold use name from .desktop file, not name of ...
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: desktop (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-18 11:18 UTC by Oliver Henshaw
Modified: 2011-11-05 12:56 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Henshaw 2011-10-18 11:18:45 UTC
Version:           unspecified (using KDE 4.7.2) 
OS:                Linux

The application launchers installed by default in kde 4.7 are named "dolphin" and "kfmclient", when they should be named "Dolphin" and "Konqueror".

This was observed on a clean Fedora 16 nightly image, with:
kdelibs-4.7.2-2.fc16.x86_64
kdebase-workspace-4.7.2-1.fc16.x86_64


I see that the launchers come from this snippet in .kde/share/config/plasma-desktop-appletsrc:

browser=preferred://browser, , ,\s
filemanager=preferred://filemanager, , ,\s

So presumably the preferred:// url launcher needs to pull the (localised) displayed name from the Name field of the .desktop file, rather than the Exec field.

Reproducible: Always

Steps to Reproduce:
Login to a freshly created kde profile, or one where the preferred launchers have not been removed.


Expected Results:  
See above.
Comment 1 Aaron J. Seigo 2011-11-05 12:56:59 UTC
Git commit 5b1f645da22acfbaa236128e61100d2c26df330c by Aaron Seigo.
Committed on 05/11/2011 at 13:56.
Pushed by aseigo into branch 'master'.

use the name in the .desktop file

BUG:284348

M  +3    -2    libs/taskmanager/launcheritem.cpp

http://commits.kde.org/kde-workspace/5b1f645da22acfbaa236128e61100d2c26df330c