use the name in the .desktop file

BUG:284348